MiniJava_A5/src/compiler/Frontend/MiniJavaParser.java
// $ANTLR 3.5 /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g 2013-10-22 10:08:42

  package compiler.Frontend;
  
  import java.util.LinkedList;
  import compiler.IR.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class MiniJavaParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "IDENT", "INT", 
		"LOWER", "NEWLINE", "NONNULL", "NUMBER", "STRING", "UPPER", "WHITESPACE", 
		"'!'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "';'", 
		"'<'", "'='", "'=='", "'String[]'", "'System.out.print'", "'System.out.println'", 
		"'['", "']'", "'boolean'", "'class'", "'else'", "'extends'", "'false'", 
		"'if'", "'int'", "'main'", "'new'", "'public'", "'return'", "'static'", 
		"'this'", "'true'", "'void'", "'while'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int CHAR=4;
	public static final int COMMENT=5;
	public static final int IDENT=6;
	public static final int INT=7;
	public static final int LOWER=8;
	public static final int NEWLINE=9;
	public static final int NONNULL=10;
	public static final int NUMBER=11;
	public static final int STRING=12;
	public static final int UPPER=13;
	public static final int WHITESPACE=14;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MiniJavaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MiniJavaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return MiniJavaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g"; }





	// $ANTLR start "program"
	// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:17:1: program returns [MJProgram p] :mc= mainClass (cd= classDeclaration )* ;
	public final MJProgram program() throws RecognitionException {
		MJProgram p = null;


		MJClass mc =null;
		MJClass cd =null;

		try {
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:18:3: (mc= mainClass (cd= classDeclaration )* )
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:18:5: mc= mainClass (cd= classDeclaration )*
			{
			 LinkedList<MJClass> cdl = new LinkedList<MJClass>(); 
			pushFollow(FOLLOW_mainClass_in_program52);
			mc=mainClass();
			state._fsp--;

			 cdl.add(mc); 
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:21:7: (cd= classDeclaration )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==34) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:21:9: cd= classDeclaration
					{
					pushFollow(FOLLOW_classDeclaration_in_program74);
					cd=classDeclaration();
					state._fsp--;

					 cdl.add(cd); 
					}
					break;

				default :
					break loop1;
				}
			}

			 
			      p = new MJProgram(cdl);
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "program"



	// $ANTLR start "classDeclaration"
	// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:29:1: classDeclaration returns [MJClass c] : 'class' cname= IDENT ( 'extends' scname= IDENT )? '{' (vd= varDeclaration )* (md= methodDeclaration )* '}' ;
	public final MJClass classDeclaration() throws RecognitionException {
		MJClass c = null;


		Token cname=null;
		Token scname=null;
		MJVariable vd =null;
		MJMethod md =null;

		try {
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:30:3: ( 'class' cname= IDENT ( 'extends' scname= IDENT )? '{' (vd= varDeclaration )* (md= methodDeclaration )* '}' )
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:30:5: 'class' cname= IDENT ( 'extends' scname= IDENT )? '{' (vd= varDeclaration )* (md= methodDeclaration )* '}'
			{
			 String superClass = "Object"; 
			      LinkedList<MJVariable> vdl = new LinkedList<MJVariable>();
			      LinkedList<MJMethod> mdl = new LinkedList<MJMethod>();
			    
			match(input,34,FOLLOW_34_in_classDeclaration126); 
			cname=(Token)match(input,IDENT,FOLLOW_IDENT_in_classDeclaration132); 
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:34:27: ( 'extends' scname= IDENT )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==36) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:34:29: 'extends' scname= IDENT
					{
					match(input,36,FOLLOW_36_in_classDeclaration136); 
					scname=(Token)match(input,IDENT,FOLLOW_IDENT_in_classDeclaration142); 
					 superClass = (scname!=null?scname.getText():null); 
					}
					break;

			}

			match(input,49,FOLLOW_49_in_classDeclaration153); 
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:35:9: (vd= varDeclaration )*
			loop3:
			while (true) {
				int alt3=2;
				switch ( input.LA(1) ) {
				case 33:
					{
					int LA3_2 = input.LA(2);
					if ( (LA3_2==IDENT) ) {
						int LA3_5 = input.LA(3);
						if ( (LA3_5==24) ) {
							alt3=1;
						}

					}

					}
					break;
				case 39:
					{
					int LA3_3 = input.LA(2);
					if ( (LA3_3==IDENT) ) {
						int LA3_5 = input.LA(3);
						if ( (LA3_5==24) ) {
							alt3=1;
						}

					}

					}
					break;
				case IDENT:
					{
					int LA3_4 = input.LA(2);
					if ( (LA3_4==IDENT) ) {
						int LA3_5 = input.LA(3);
						if ( (LA3_5==24) ) {
							alt3=1;
						}

					}

					}
					break;
				}
				switch (alt3) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:35:11: vd= varDeclaration
					{
					pushFollow(FOLLOW_varDeclaration_in_classDeclaration161);
					vd=varDeclaration();
					state._fsp--;

					 vd.setField();
					            vdl.add(vd);
					          
					}
					break;

				default :
					break loop3;
				}
			}

			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:40:9: (md= methodDeclaration )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==IDENT||LA4_0==33||LA4_0==39||LA4_0==42||LA4_0==44||LA4_0==47) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:40:11: md= methodDeclaration
					{
					pushFollow(FOLLOW_methodDeclaration_in_classDeclaration202);
					md=methodDeclaration();
					state._fsp--;

					 mdl.add(md);
					          
					}
					break;

				default :
					break loop4;
				}
			}

			match(input,50,FOLLOW_50_in_classDeclaration233); 

			      c = new MJClass((cname!=null?cname.getText():null), superClass, vdl, mdl);
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return c;
	}
	// $ANTLR end "classDeclaration"



	// $ANTLR start "mainClass"
	// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:50:1: mainClass returns [MJClass c] : 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String[]' parname= IDENT ')' b= block '}' ;
	public final MJClass mainClass() throws RecognitionException {
		MJClass c = null;


		Token cname=null;
		Token parname=null;
		MJBlock b =null;

		try {
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:51:3: ( 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String[]' parname= IDENT ')' b= block '}' )
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:51:5: 'class' cname= IDENT '{' 'public' 'static' 'void' 'main' '(' 'String[]' parname= IDENT ')' b= block '}'
			{
			match(input,34,FOLLOW_34_in_mainClass256); 
			cname=(Token)match(input,IDENT,FOLLOW_IDENT_in_mainClass262); 
			match(input,49,FOLLOW_49_in_mainClass269); 
			match(input,42,FOLLOW_42_in_mainClass278); 
			match(input,44,FOLLOW_44_in_mainClass280); 
			match(input,47,FOLLOW_47_in_mainClass282); 
			match(input,40,FOLLOW_40_in_mainClass284); 
			match(input,17,FOLLOW_17_in_mainClass286); 
			match(input,28,FOLLOW_28_in_mainClass288); 
			parname=(Token)match(input,IDENT,FOLLOW_IDENT_in_mainClass294); 
			match(input,18,FOLLOW_18_in_mainClass296); 
			pushFollow(FOLLOW_block_in_mainClass302);
			b=block();
			state._fsp--;

			match(input,50,FOLLOW_50_in_mainClass308); 

			      MJType partype = MJType.getArrayType(MJType.getClassType("String"));
			      MJVariable par = new MJVariable( partype, (parname!=null?parname.getText():null));
			      LinkedList<MJVariable> parlist = new LinkedList<MJVariable>();
			      parlist.add(par);
			     
			      MJMethod md = new MJMethod(MJType.getVoidType(), "main", parlist, b, true, true, true);
			      c = new MJClass((cname!=null?cname.getText():null), md);
			  
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return c;
	}
	// $ANTLR end "mainClass"



	// $ANTLR start "block"
	// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:66:1: block returns [MJBlock b] : '{' (vd= varDeclaration )* (sd= statement )* '}' ;
	public final MJBlock block() throws RecognitionException {
		MJBlock b = null;


		MJVariable vd =null;
		MJStatement sd =null;

		try {
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:67:3: ( '{' (vd= varDeclaration )* (sd= statement )* '}' )
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:67:5: '{' (vd= varDeclaration )* (sd= statement )* '}'
			{
			  LinkedList<MJVariable> vdl = new LinkedList<MJVariable>();
			       LinkedList<MJStatement> sdl = new LinkedList<MJStatement>();    
			    
			match(input,49,FOLLOW_49_in_block339); 
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:70:9: (vd= varDeclaration )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==IDENT) ) {
					int LA5_2 = input.LA(2);
					if ( (LA5_2==IDENT) ) {
						alt5=1;
					}

				}
				else if ( (LA5_0==33||LA5_0==39) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:70:11: vd= varDeclaration
					{
					pushFollow(FOLLOW_varDeclaration_in_block347);
					vd=varDeclaration();
					state._fsp--;

					 vdl.add(vd); 
					}
					break;

				default :
					break loop5;
				}
			}

			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:73:9: (sd= statement )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( ((LA6_0 >= COMMENT && LA6_0 <= IDENT)||(LA6_0 >= 29 && LA6_0 <= 30)||LA6_0==38||LA6_0==45||(LA6_0 >= 48 && LA6_0 <= 49)) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:73:11: sd= statement
					{
					pushFollow(FOLLOW_statement_in_block388);
					sd=statement();
					state._fsp--;

					 sdl.add(sd); 
					}
					break;

				default :
					break loop6;
				}
			}

			match(input,50,FOLLOW_50_in_block418); 

			       b = new MJBlock(vdl, sdl);
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return b;
	}
	// $ANTLR end "block"



	// $ANTLR start "varDeclaration"
	// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:82:1: varDeclaration returns [MJVariable vd] : t= type n= IDENT ';' ;
	public final MJVariable varDeclaration() throws RecognitionException {
		MJVariable vd = null;


		Token n=null;
		MJType t =null;

		try {
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:83:3: (t= type n= IDENT ';' )
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:83:5: t= type n= IDENT ';'
			{
			pushFollow(FOLLOW_type_in_varDeclaration449);
			t=type();
			state._fsp--;

			n=(Token)match(input,IDENT,FOLLOW_IDENT_in_varDeclaration455); 
			match(input,24,FOLLOW_24_in_varDeclaration458); 
			 vd = new MJVariable(t, (n!=null?n.getText():null));
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return vd;
	}
	// $ANTLR end "varDeclaration"



	// $ANTLR start "type"
	// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:88:1: type returns [MJType t] : ( 'boolean' | 'int' | IDENT );
	public final MJType type() throws RecognitionException {
		MJType t = null;


		Token IDENT1=null;

		try {
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:89:3: ( 'boolean' | 'int' | IDENT )
			int alt7=3;
			switch ( input.LA(1) ) {
			case 33:
				{
				alt7=1;
				}
				break;
			case 39:
				{
				alt7=2;
				}
				break;
			case IDENT:
				{
				alt7=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
			switch (alt7) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:89:5: 'boolean'
					{
					match(input,33,FOLLOW_33_in_type482); 
					 t = MJType.getBooleanType(); 
					}
					break;
				case 2 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:91:5: 'int'
					{
					match(input,39,FOLLOW_39_in_type494); 
					 t = MJType.getIntType(); 
					}
					break;
				case 3 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:93:5: IDENT
					{
					IDENT1=(Token)match(input,IDENT,FOLLOW_IDENT_in_type507); 
					 t = MJType.getClassType((IDENT1!=null?IDENT1.getText():null)); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "type"



	// $ANTLR start "methodDeclaration"
	// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:97:1: methodDeclaration returns [MJMethod md] : ( 'public' )? ( 'static' )? mtype= procType mname= IDENT '(' (t1= type n1= IDENT ( ',' t2= type n2= IDENT )* )? ')' '{' (vd= varDeclaration )* (sd= statement )* 'return' retExp= optExpression ';' '}' ;
	public final MJMethod methodDeclaration() throws RecognitionException {
		MJMethod md = null;


		Token mname=null;
		Token n1=null;
		Token n2=null;
		MJType mtype =null;
		MJType t1 =null;
		MJType t2 =null;
		MJVariable vd =null;
		MJStatement sd =null;
		MJExpression retExp =null;

		try {
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:98:3: ( ( 'public' )? ( 'static' )? mtype= procType mname= IDENT '(' (t1= type n1= IDENT ( ',' t2= type n2= IDENT )* )? ')' '{' (vd= varDeclaration )* (sd= statement )* 'return' retExp= optExpression ';' '}' )
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:98:5: ( 'public' )? ( 'static' )? mtype= procType mname= IDENT '(' (t1= type n1= IDENT ( ',' t2= type n2= IDENT )* )? ')' '{' (vd= varDeclaration )* (sd= statement )* 'return' retExp= optExpression ';' '}'
			{
			 LinkedList<MJVariable> parlist = new LinkedList<MJVariable>(); 
			      boolean isStatic = false;
			      boolean isPublic = false;
			      LinkedList<MJVariable> vdl = new LinkedList<MJVariable>();
			      LinkedList<MJStatement> sdl = new LinkedList<MJStatement>();    
			    
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:104:5: ( 'public' )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==42) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:104:7: 'public'
					{
					match(input,42,FOLLOW_42_in_methodDeclaration539); 
					 isPublic = true; 
					}
					break;

			}

			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:105:5: ( 'static' )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==44) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:105:7: 'static'
					{
					match(input,44,FOLLOW_44_in_methodDeclaration552); 
					 isStatic = true; 
					}
					break;

			}

			pushFollow(FOLLOW_procType_in_methodDeclaration567);
			mtype=procType();
			state._fsp--;

			mname=(Token)match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration573); 
			match(input,17,FOLLOW_17_in_methodDeclaration580); 
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:108:7: (t1= type n1= IDENT ( ',' t2= type n2= IDENT )* )?
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( (LA11_0==IDENT||LA11_0==33||LA11_0==39) ) {
				alt11=1;
			}
			switch (alt11) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:108:9: t1= type n1= IDENT ( ',' t2= type n2= IDENT )*
					{
					pushFollow(FOLLOW_type_in_methodDeclaration595);
					t1=type();
					state._fsp--;

					n1=(Token)match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration601); 
					 parlist.add(new MJVariable(t1,(n1!=null?n1.getText():null))); 
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:110:9: ( ',' t2= type n2= IDENT )*
					loop10:
					while (true) {
						int alt10=2;
						int LA10_0 = input.LA(1);
						if ( (LA10_0==21) ) {
							alt10=1;
						}

						switch (alt10) {
						case 1 :
							// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:110:11: ',' t2= type n2= IDENT
							{
							match(input,21,FOLLOW_21_in_methodDeclaration624); 
							pushFollow(FOLLOW_type_in_methodDeclaration630);
							t2=type();
							state._fsp--;

							n2=(Token)match(input,IDENT,FOLLOW_IDENT_in_methodDeclaration636); 
							 parlist.add(new MJVariable(t2,(n2!=null?n2.getText():null))); 
							}
							break;

						default :
							break loop10;
						}
					}

					}
					break;

			}

			match(input,18,FOLLOW_18_in_methodDeclaration677); 
			match(input,49,FOLLOW_49_in_methodDeclaration684); 
			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:115:9: (vd= varDeclaration )*
			loop12:
			while (true) {
				int alt12=2;
				int LA12_0 = input.LA(1);
				if ( (LA12_0==IDENT) ) {
					int LA12_2 = input.LA(2);
					if ( (LA12_2==IDENT) ) {
						alt12=1;
					}

				}
				else if ( (LA12_0==33||LA12_0==39) ) {
					alt12=1;
				}

				switch (alt12) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:115:11: vd= varDeclaration
					{
					pushFollow(FOLLOW_varDeclaration_in_methodDeclaration692);
					vd=varDeclaration();
					state._fsp--;

					 vdl.add(vd); 
					}
					break;

				default :
					break loop12;
				}
			}

			// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:118:9: (sd= statement )*
			loop13:
			while (true) {
				int alt13=2;
				int LA13_0 = input.LA(1);
				if ( ((LA13_0 >= COMMENT && LA13_0 <= IDENT)||(LA13_0 >= 29 && LA13_0 <= 30)||LA13_0==38||LA13_0==45||(LA13_0 >= 48 && LA13_0 <= 49)) ) {
					alt13=1;
				}

				switch (alt13) {
				case 1 :
					// /Users/probst/workspace/MiniJava_A5/src/compiler/Frontend/MiniJava.g:118:11: sd= statement
					{
					pushFollow(FOLLOW_statement_in_methodDeclaration733);
					sd=statement();
					state._fsp--;

					 sdl.add(sd); 
					}
					break;

				default :
					break loop13;
				}
			}

			match(input,43,FOLLOW_43_in_methodDeclaration767); 
			pushFollow(FOLLOW_optExpression_in_methodDeclaration773);
			retExp=optExpression();
			state._fsp--;

			match(input,24,FOLLOW_24_in_methodDeclaration775); 
			 
			          MJReturn r = new MJReturn(retExp);
			          sdl.add(r);
			        
			match(input,50,FOLLOW_50_in_methodDeclaration791); 

			      MJBlock b = new MJBlock(vdl, sdl);
			      md = new MJMethod(mtype, (mname!=null?mname.getText():null), parlist,  b, isStatic, isPublic);
			    
			}

		}
